--- a/HPBD/index.html
+++ b/HPBD/index.html
@@ -36,25 +36,25 @@
 	   Your browser isn't invited for super fun audio time.
     </audio>
     <div class="balloons text-center" id="b1">
-    	<h2 style="color:#F2B300;">H</h2>
+    	<h2 style="color:#F2B300;">s</h2>
     </div>
     <div class="balloons text-center" id="b2">
-    	<h2 style="color:#0719D4;">B</h2>
+    	<h2 style="color:#0719D4;">W</h2>
     </div>
 	<div class="balloons text-center" id="b3">
-    	<h2 style="color:#D14D39;">D</h2>
+    	<h2 style="color:#D14D39;">E</h2>
     </div>
 	<div class="balloons text-center" id="b4">
-    	<h2 style="color:#8FAD00;">X</h2>
+    	<h2 style="color:#8FAD00;">E</h2>
     </div>
 	<div class="balloons text-center" id="b5">
-    	<h2 style="color:#8377E4;">O</h2>
+    	<h2 style="color:#8377E4;">T</h2>
     </div>
     <div class="balloons text-center" id="b6">
-    	<h2 style="color:#99C96A;">L</h2>
+    	<h2 style="color:#99C96A;">2</h2>
     </div>
     <div class="balloons text-center" id="b7">
-    	<h2 style="color:#20CFB4;">A</h2>
+    	<h2 style="color:#20CFB4;">1</h2>
     </div>
 
     <img src="Balloon-Border.png" width="100%" class="balloon-border">
@@ -104,38 +104,33 @@
 		</div>
 		<div class="row message">
 			<div class="col-md-12">
-				<p>Aloooo</p>
-				<p>Trang Thanh hả :vvv</p>
-				<p>Hôm nay là ...</p>
-				<p>noel :)))</p>
-				<p>và cũng là </p>
-				<p>sinh nhật của em</p>
-				<p>hmmmm</p>
-				<p>hôm nay rất là đặc biệt</p>
-				<p>một ngày đặc biệt của em</p>
-				<p>đó là lý do</p>
-				<p>anh làm cái này</p>
-				<p>như là một món quà nho nhỏ</p>
-				<p>anh dành tặng cho em</p>
-				<p>chúc em tuổi mới</p>
-				<p>lúc nào cũng vui và hạnh phúc</p>
-				<p>Và hãy nhớ</p>
-				<p>cười nhiều lên nhé</p>
+				<p>Hellooo</p>
+				<p>Biết nhau 2 năm rồi</p>
+				<p>Mà hôm nay mới có dịp chúc sinh nhật</p>
+				<p>Nhân ngày canh tý tháng canh dần năm tân sửu</p>
+				<p>Tức 21/02/2022 dương lịch</p>
+				<p>Chúc Phương Loan</p>
+				<p>Sinh nhật vui vẻ</p>
+				<p>Tuổi mới nhiều niềm vui</p>
+				<p>Xinh xắn</p>
+				<p>Học giỏi</p>
+				<p>Nhiều tiền $$$</p>
+				<p>Hạnh phúc</p>
 				<p>Wish you all the bestttt</p>
-				<p>Chúc mừng sinh nhật Trang Thanh nheeeee!!!</p>
+				<p>Chúc mừng sinh nhật Loan nheeeee!!!</p>
 			</div>
 		</div>
 		<div class="navbar navbar-fixed-bottom">
 			<div class="row">
 				<div class="col-md-6 text-center col-md-offset-3">
-					<button class="btn btn-primary" id="turn_on">Turn On Lights</button>
-					<button class="btn btn-primary" id="play">Play Music</button>
-					<button class="btn btn-primary" id="bannar_coming">Let's Decorate</button>
-					<button class="btn btn-primary" id="balloons_flying">Fly With Balloons</button>
-					<button class="btn btn-primary" id="cake_fadein">Most Delicious Cake Ever</button>
-					<button class="btn btn-primary" id="light_candle"> Light Candle</button>
+					<button class="btn btn-primary" id="turn_on">Bật đèn lên đi</button>
+					<button class="btn btn-primary" id="play">Bật nhạc nữa</button>
+					<button class="btn btn-primary" id="bannar_coming">Trang trí xíu</button>
+					<button class="btn btn-primary" id="balloons_flying">Bóng bay nè</button>
+					<button class="btn btn-primary" id="cake_fadein">Bánh kem ngon nhất quả đất</button>
+					<button class="btn btn-primary" id="light_candle"> Thắp nến </button>
 					<button class="btn btn-primary" id="wish_message">Happy Birthday</button>
-					<button class="btn btn-primary" id="story">A mesage for you</button>
+					<button class="btn btn-primary" id="story">Chúc nè</button>
 					<!-- <button class="btn btn-primary" id="cake_cut">Lrt's Cut the Cake</button> -->
 				</div>
 			</div>
