--- a/HPBD/index.html
+++ b/HPBD/index.html
@@ -104,20 +104,20 @@
 		</div>
 		<div class="row message">
 			<div class="col-md-12">
-				<p>Hellooo</p>
-				<p>Biết nhau 2 năm rồi</p>
-				<p>Mà hôm nay mới có dịp chúc sinh nhật</p>
-				<p>Nhân ngày canh tý tháng canh dần năm tân sửu</p>
-				<p>Tức 21/02/2022 dương lịch</p>
-				<p>Chúc Phương Loan</p>
+				<p>Chào bạn</p>
+				<p>Nhân dịp ngày mai là Quốc tế thiếu nhi</p>
+				<p>Nên hôm nay mình có dịp chúc mừng sinh nhật bạn</p>
+				<p>Nhân ngày giáp thân tháng bính ngọ năm nhâm dần</p>
+				<p>Tức 31/05/2022 dương lịch</p>
+				<p>Chúc bạn :3</p>
 				<p>Sinh nhật vui vẻ</p>
-				<p>Tuổi mới nhiều niềm vui</p>
+				<p>Tuổi mới very niềm vui</p>
 				<p>Xinh xắn</p>
 				<p>Học giỏi</p>
 				<p>Nhiều tiền $$$</p>
-				<p>Thật hạnh phúc nha</p>
+				<p>Thật very hạnh phúc</p>
 				<p>Wish you all the bestttt</p>
-				<p>Chúc mừng sinh nhật Loan nheeeee!!!</p>
+				<p>Chúc mừng mai quốc tế thiếu nhi!!!</p>
 			</div>
 		</div>
 		<div class="navbar navbar-fixed-bottom">
@@ -130,7 +130,7 @@
 					<button class="btn btn-primary" id="cake_fadein">Bánh kem ngon nhất quả đất</button>
 					<button class="btn btn-primary" id="light_candle"> Thắp nến </button>
 					<button class="btn btn-primary" id="wish_message">Happy Birthday</button>
-					<button class="btn btn-primary" id="story">Chúc nè</button>
+					<button class="btn btn-primary" id="story">Thư ngỏ</button>
 					<!-- <button class="btn btn-primary" id="cake_cut">Lrt's Cut the Cake</button> -->
 				</div>
 			</div>
